--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styleGlobal.css">
     <link rel="stylesheet" href="css/hader.css">
+    <link rel="stylesheet" href="css/main.css">
     <script src="main.js" defer></script>
 
 </head>
@@ -17,7 +18,7 @@
         <img src="logoFastParking.png" alt="FastParking" title="FastParking">
     </header>
     <main>
-        <table >
+        <table id="table">
             <thead>
                 <tr>
                     <th>Nome</th>
@@ -33,9 +34,20 @@
                 <td>12/11/2018</td>
                 <td>14:00</td>
                 <td>
-                    <button type="button">Comp.</button>
-                    <button type="button">Editar</button>
-                    <button type="button">Saída</button>
+                    <button class="button green" type="button">Comp.</button>
+                    <button class="button blue" type="button">Editar</button>
+                    <button class="button red" type="button">Saída</button>
+                </td>
+            </tbody>
+            <tbody>
+                <td>Marcos Coelho</td>
+                <td>FKX-3651</td>
+                <td>12/11/2018</td>
+                <td>14:11</td>
+                <td>
+                    <button class="button green" type="button">Comp.</button>
+                    <button class="button blue" type="button">Editar</button>
+                    <button class="button red" type="button">Saída</button>
                 </td>
             </tbody>
         </table>
