contruindo html e css, construindo formulãrio de preços

--- a/cadastroCarros.html
+++ b/cadastroCarros.html
@@ -22,16 +22,16 @@
             <form id="form-register">
                 <div>
                     <label for="nome">Nome</label>
-                    <input type="text" class="input-register" id="nome" placeholder="Nome" required/>
+                    <input type="text" class="input-form" id="nome" placeholder="Nome" required/>
                 </div>
                 <div>
                     <label for="placa">Placa</label>
-                    <input type="text" class="input-register" id="placa" placeholder="Placa" required/>
+                    <input type="text" class="input-form" id="placa" placeholder="Placa" required/>
                 </div>
             </form>
             <footer id="footer-register">
                 <button type="submit" class="button green" id="salvar">Salvar</button>
-                <button type="button" class="button yellow" id="cancelar">Preços</button>
+                <button type="button" class="button yellow" id="cancelar" onclick="javascript:window.location.href='cadastroPrecos.html'">Preços</button>
             </footer>
             
         </div>
