--- a/cadastroCarros.html
+++ b/cadastroCarros.html
@@ -51,7 +51,7 @@
                 <td>12/11/2018</td>
                 <td>14:00</td>
                 <td>
-                    <button class="button green type="button">Comp.</button>
+                    <button class="button green" type="button" onclick="javascript:window.location.href='comprovante.html'">Comp.</button>
                     <button class="button blue" type="button">Editar</button>
                     <button class="button red" type="button">Saída</button>
                 </td>
@@ -62,7 +62,7 @@
                 <td>12/11/2018</td>
                 <td>14:11</td>
                 <td>
-                    <button class="button green type="button">Comp.</button>
+                    <button class="button green" type="button" onclick="javascript:window.location.href='comprovante.html'">Comp.</button>
                     <button class="button blue" type="button">Editar</button>
                     <button class="button red" type="button">Saída</button>
                 </td>
