--- a/comprovante.html
+++ b/comprovante.html
@@ -24,19 +24,19 @@
             <form id="form-receipt">
                 <div>
                     <label>Nome:</label>
-                    <input class="input-empty" readonly/>
+                    <input class="input-readonly" readonly/>
                 </div>
                 <div>
                     <label>Placa:</label>
-                    <input class="input-empty" readonly/>
+                    <input class="input-readonly" readonly/>
                 </div>
                 <div>
                     <label>Data:</label>
-                    <input class="input-empty" readonly/>
+                    <input class="input-readonly" readonly/>
                 </div>
                 <div>
                     <label>Hora:</label>
-                    <input class="input-empty" readonly/>
+                    <input class="input-readonly" readonly/>
                 </div>
             </form>
             <footer id="footer-receipt">
