contruindo html e css, construindo comprovante de saida

--- a/cadastroCarros.html
+++ b/cadastroCarros.html
@@ -53,7 +53,7 @@
                 <td>
                     <button class="button green" type="button" onclick="javascript:window.location.href='comprovante.html'">Comp.</button>
                     <button class="button blue" type="button">Editar</button>
-                    <button class="button red" type="button">Saída</button>
+                    <button class="button red" type="button" onclick="javascript:window.location.href='comprovanteSaida.html'">Saída</button>
                 </td>
             </tbody>
             <tbody>
@@ -64,7 +64,7 @@
                 <td>
                     <button class="button green" type="button" onclick="javascript:window.location.href='comprovante.html'">Comp.</button>
                     <button class="button blue" type="button">Editar</button>
-                    <button class="button red" type="button">Saída</button>
+                    <button class="button red" type="button" onclick="javascript:window.location.href='comprovanteSaida.html'">Saída</button>
                 </td>
             </tbody>
         </table>
