--- a/comprovanteSaida.html
+++ b/comprovanteSaida.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comprovante</title>
+    <title>Comprovante Saída</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styleGlobal.css">
@@ -19,10 +19,10 @@
     <main>
         <div class="container-receipt">  
             <header>
-                <h1>Comprovante</h1>
+                <h1>Comprovante de Saída</h1>
             </header>      
             <form class="form-receipt">
-                <div>
+                <div> 
                     <label>Nome:</label>
                     <input class="input-readonly" readonly/>
                 </div>
@@ -31,11 +31,11 @@
                     <input class="input-readonly" readonly/>
                 </div>
                 <div>
-                    <label>Data:</label>
+                    <label>entrada:</label>
                     <input class="input-readonly" readonly/>
                 </div>
                 <div>
-                    <label>Hora:</label>
+                    <label>saída:</label>
                     <input class="input-readonly" readonly/>
                 </div>
             </form>
