--- a/cadastroPrecos.html
+++ b/cadastroPrecos.html
@@ -9,29 +9,37 @@
     <link rel="stylesheet" href="css/styleGlobal.css">
     <link rel="stylesheet" href="css/hader.css">
     <link rel="stylesheet" href="css/main.css">
-    <script src="main.js" defer></script>
 </head>
 <body>
     <main>
-    <div id="container-price">
-        <header>
-            <h1>Preços</h1>
-        </header>       
-        <form id="form-price">
-            <div>
-                <label for="primeira-hora">Primeira hora</label>
-                <input type="text" class="input-form" id="primeira-hora" placeholder="Primeira hora" required/>
-            </div>
-            <div>
-                <label for="demais-horas">Demais horas</label>
-                <input type="text" class="input-form" id="demais-horas" placeholder="Demais horas" required/>
-            </div>
-        </form>
-        <footer id="footer-price">
-            <button type="submit" class="button green" id="salvar" onclick="javascript:window.location.href='cadastroCarros.html'">Salvar</button>
-            <button type="button" class="button red" id="cancelar" onclick="javascript:window.location.href='cadastroCarros.html'">Cancelar</button>
+        <div id="container-price">
+            <header>
+                <h1>Preços</h1>
+            </header>       
+            <form id="form-price">
+                <div>
+                    <label for="primeira-hora">Primeira hora</label>
+                    <input type="text" class="input-form" id="primeira-hora" placeholder="Primeira hora" required/>
+                </div>
+                <div>
+                    <label for="demais-horas">Demais horas</label>
+                    <input type="text" class="input-form" id="demais-horas" placeholder="Demais horas" required/>
+                </div>
+            </form>
+            <footer id="footer-price">
+                <button type="submit" class="button green" id="salvar" onclick="javascript:window.location.href='cadastroCarros.html'">Salvar</button>
+                <button type="button" class="button red" id="cancelar" onclick="javascript:window.location.href='cadastroCarros.html'">Cancelar</button>
         </footer>
     </div>
-    </main>
+</main>
 </body>
+<script src="main.js"></script>
+<script lang="javascript">    
+    document.querySelector('#salvar')
+        .addEventListener('click', clearInputs);
+    
+    document.querySelector('#cancelar')
+        .addEventListener('click', clearInputs);
+            
+</script>
 </html>
