--- a/cadastroCarros.html
+++ b/cadastroCarros.html
@@ -46,48 +46,25 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>Maria da Silva</td>
-                    <td>RCA-3438</td>
-                    <td>12/11/2018</td>
-                    <td>14:00</td>
-                    <td>
-                        <button id="button-receipt" class="button green" type="button" onclick="javascript:window.location.href='comprovante.html'">Comp.</button>
-                        <button id="button-edit" class="button blue" type="button">Editar</button>
-                        <button id="button-exit" class="button red" type="button" onclick="javascript:window.location.href='comprovanteSaida.html'">Saída</button>
-                    </td>
-                </tr>
+
             </tbody>
-            <!-- <tbody>
-                <td>Marcos Coelho</td>
-                <td>FKX-3651</td>
-                <td>12/11/2018</td>
-                <td>14:11</td>
-                <td>
-                    <button id="button-receipt" class="button green" type="button" onclick="javascript:window.location.href='comprovante.html'">Comp.</button>
-                    <button id="button-edit" class="button blue" type="button">Editar</button>
-                    <button id="button-exit" class="button red" type="button" onclick="javascript:window.location.href='comprovanteSaida.html'">Saída</button>
-                </td>
-            </tbody> -->
+
         </table>
     </main>    
 </body>
 <script src="main.js"></script>
 <script lang="javascript">
-    document.querySelector('#button-receipt')
-        .addEventListener('click', clearInputs);
 
-    document.querySelector('#button-edit')
-        .addEventListener('click', clearInputs);
+document.querySelector('#salvar')
+    .addEventListener('click', saveCar);
 
-    document.querySelector('#button-exit')
-        .addEventListener('click', clearInputs);
+document.querySelector('#precos')
+    .addEventListener('click', clearInputs);
 
-    document.querySelector('#salvar')
-        .addEventListener('click', saveCar);
+updateTable();
+document.querySelector('#tableCars')
+    .addEventListener('click', getButtons);
 
-    document.querySelector('#precos')
-        .addEventListener('click', clearInputs);
         
 </script>
 </html>
