mudança para o estilo de modais

--- a/cadastroCarros.html
+++ b/cadastroCarros.html
@@ -106,6 +106,41 @@
                     <button type="submit" class="button blue" id="imprimir">Imprimir</button>
                     <button type="button" class="button red" id="cancelar-receipt">Cancelar</button>
                 </footer>
+            </div>
+        </div>
+        <!-- MODAL COMPROVANTE DE SAÍDA -->
+        <div>
+            <div class="container-receipt">
+                <header>
+                    <h1>Comprovante de Saída</h1>
+                </header>
+                <form class="form-receipt">
+                    <div>
+                        <label>Nome:</label>
+                        <input class="input-readonly" readonly />
+                    </div>
+                    <div>
+                        <label>Placa:</label>
+                        <input class="input-readonly" readonly />
+                    </div>
+                    <div>
+                        <label>entrada:</label>
+                        <input class="input-readonly" readonly />
+                    </div>
+                    <div>
+                        <label>saída:</label>
+                        <input class="input-readonly" readonly />
+                    </div>
+                    <div>
+                        <label>Valor a pagar:</label>
+                        <input class="input-readonly" readonly />
+                    </div>
+                </form>
+                <footer class="footer-receipt">
+                    <button type="submit" class="button blue" id="imprimir">Imprimir</button>
+                    <button type="button" class="button red" id="cancelar"
+                        onclick="javascript:window.location.href='cadastroCarros.html'">Cancelar</button>
+                </footer>
 
             </div>
         </div>
