modais e comprovantes prontos

--- a/cadastroCarros.html
+++ b/cadastroCarros.html
@@ -84,7 +84,7 @@
                     <h1>Comprovante</h1>
                     <span class="close-button" id="close-receipt">&#10006;</span>
                 </header>
-                <form class="form">
+                <form class="form" id="form-receipt">
                     <div>
                         <label>Nome:</label>
                         <input class="input-readonly" readonly />
@@ -109,12 +109,13 @@
             </div>
         </div>
         <!-- MODAL COMPROVANTE DE SAÍDA -->
-        <div>
-            <div class="container-receipt">
-                <header>
+        <div class="modal" id="modal-exit">
+            <div class="modal-content">
+                <header class="modal-header">
                     <h1>Comprovante de Saída</h1>
+                    <span class="close-button" id="close-exit">&#10006;</span>
                 </header>
-                <form class="form-receipt">
+                <form class="form" id="form-exit">
                     <div>
                         <label>Nome:</label>
                         <input class="input-readonly" readonly />
@@ -136,10 +137,9 @@
                         <input class="input-readonly" readonly />
                     </div>
                 </form>
-                <footer class="footer-receipt">
+                <footer class="modal-footer">
                     <button type="submit" class="button blue" id="imprimir">Imprimir</button>
-                    <button type="button" class="button red" id="cancelar"
-                        onclick="javascript:window.location.href='cadastroCarros.html'">Cancelar</button>
+                    <button type="button" class="button red" id="cancelar-exit">Cancelar</button>
                 </footer>
 
             </div>
