arrumação do css

--- a/cadastroCarros.html
+++ b/cadastroCarros.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/hader.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/modal.css">
+    <link rel="stylesheet" href="css/inputs.css">
 
 
 </head>
@@ -92,15 +93,15 @@
                     </div>
                     <div>
                         <label for="placa-edited">Placa</label>
-                        <input type="text" class="input-form" id="placa-edited"  required />
+                        <input type="text" class="input-form" id="placa-edited" required />
                     </div>
                     <div>
                         <label for="data">Data</label>
-                        <input type="text" class="input-readonly" id="data"  readonly />
+                        <input type="text" class="input-readonly" id="data" readonly />
                     </div>
                     <div>
                         <label for="hora">Hora de Entrada</label>
-                        <input type="text" class="input-readonly" id="hora"  readonly />
+                        <input type="text" class="input-readonly" id="hora" readonly />
                     </div>
                 </form>
 
